fixed flexbox spacing issue with minimal code changes.  theoretically, the way flexbox works, this should fix it. pushing changes and testing live

--- a/public/css/components/homeColumns/centerColumn.css
+++ b/public/css/components/homeColumns/centerColumn.css
@@ -175,6 +175,8 @@
     visibility: visible;
 }
 
+/* ======================================================================================= */
+/* ======================================================================================= */
 /* ===================================MEDIA QUERIES======================================= */
 
 /* IPAD PRO */
@@ -199,6 +201,7 @@
     }
     .home .container #centerCol .links{
         margin: 0 0 1rem 0;
+        flex-flow: column nowrap;
     }
     .home .container #centerCol .links .categories .title{
         margin: 0;
