--- a/public/css/components/itemDetails.css
+++ b/public/css/components/itemDetails.css
@@ -19,6 +19,7 @@
     display: flex;
     flex-flow: row;
     justify-content: center;
+    padding-bottom: .5rem;
 }
 .detailsPage .whiteBox .subMenu .direction .btn{
     display: flex;
